--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: JackJohnKeller.com
+title: JJK
 email: jackjohnkeller@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   All things Jack Keller:  Front End Dev, Rugby, and dumb stuff.
